# teemo

./: Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini
src/: main.py
src/settings/: manager.py  models.py
src/utils/: __init__.py  filewatcher.py  logger.py  webdav.py
teemo/: main.py
teemo/libraries/: audiobookshelf.py  plex.py
teemo/settings/: manager.py  models.py
teemo/utils/: __init__.py  filewatcher.py  logger.py
tests/: test_filewatcher.py  test_manager.py  test_webdav.py
