[tool.poetry]
name = "teemo"
version = "0.1.0"
description = "Teemo - Riven FileSystem Watcher and Webdav Mounter"
authors = ["iPromKnight"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
watchdog = "^4.0.1"
loguru = "^0.7.2"
rich = "^13.7.1"
pydantic = "^2.8.2"
plexapi = "^4.15.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pyfakefs = "^5.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"